# PT-260

./: .gitignore  index.html  package.json  pnpm-lock.yaml
release/: sistema-impresion_0.1.0_amd64.deb
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  plugin_printer.rs
