[package]
name = "sistema-impresion"
version = "0.1.0"
edition = "2021"

[lib]
name = "sistema_impresion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "sistema-impresion"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
